--- a/components/main-posts/posts.css
+++ b/components/main-posts/posts.css
@@ -1,9 +1,13 @@
 .postContainer {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 16px;
 
   .content {
     display: flex;
+    flex-direction: column;
     gap: 8px;
   }
 }
