comments list e css yapıldı like sayısı fonksştonuna ekleme  like butrtona ekleme yapıldı

--- a/components/main-comments-list/commentList.css
+++ b/components/main-comments-list/commentList.css
@@ -5,9 +5,17 @@
     padding: 0;
 
     li {
-      margin: 0;
-      padding: 0;
-      flex-wrap: wrap;
+      display: flex;
+      justify-content: space-between;
+
+      p {
+        flex-wrap: wrap;
+      }
+
+      span {
+        display: flex;
+        gap: 4px;
+      }
     }
   }
 }
