--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: system-ui;
-  margin-block: 24px;
+  overflow-x: hidden;
 }
 
 img,
