--- a/components/main-comments-list/commentList.css
+++ b/components/main-comments-list/commentList.css
@@ -1,5 +1,8 @@
 .commentListContainer {
   ul {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     margin: 0;
     list-style: none;
     padding: 0;
