--- a/components/main-header/header.css
+++ b/components/main-header/header.css
@@ -2,13 +2,33 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.377);
+  padding: 16px;
+  margin-bottom: 24px;
+
+  a {
+    text-decoration: none;
+  }
+
   ul {
     display: flex;
     list-style: none;
     gap: 8px;
 
+    form {
+      button {
+        border: none;
+        background: transparent;
+        cursor: pointer;
+      }
+    }
+
     a {
       text-decoration: none;
+      border-bottom: 3px solid transparent;
+    }
+    a:hover {
+      border-bottom: 3px solid rgba(90, 90, 218, 0.664);
     }
   }
 }
