--- a/components/new-post-form/style.css
+++ b/components/new-post-form/style.css
@@ -1,15 +1,24 @@
-.commentsFormContainer {
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+  width: fit-content;
+  margin: 0 auto;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 32px;
+  border-radius: 16px;
+  align-items: center;
+
   form {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    width: fit-content;
 
+    input,
     button,
     textarea {
       border: none;
       background: transparent;
-      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
       padding: 8px 16px;
       border-radius: 16px;
     }
@@ -20,6 +29,7 @@
       color: white;
       transition: background 0.5s ease;
     }
+
     button:hover {
       background: linear-gradient(to right, #60a5fa, #3b82f6, #1e3a8a);
     }
