--- a/components/main-posts/posts.css
+++ b/components/main-posts/posts.css
@@ -6,7 +6,6 @@
   border-bottom: 2px solid rgba(0, 0, 0, 0.144);
   padding-block: 16px;
   margin: 0 auto;
-  width: 1110px;
 
   .postCard {
     text-decoration: none;
@@ -69,5 +68,17 @@
     display: flex;
     gap: 6px;
     color: black;
+  }
+}
+
+@media (max-width: 1100px) {
+  .postContainer {
+    max-width: 680px;
+  }
+}
+
+@media (max-width: 768px) {
+  .postContainer {
+    max-width: 375px;
   }
 }
