postlardaki button düzenlendi

--- a/components/main-posts/posts.css
+++ b/components/main-posts/posts.css
@@ -50,14 +50,14 @@
     .btns {
       display: flex;
       gap: 4px;
-
-      .commentsBtn {
-        display: flex;
-        border: none;
-        background: transparent;
-      }
     }
   }
+}
+
+.commentssBtn {
+  display: flex;
+  border: none;
+  background: transparent;
 }
 
 .addPost {
