--- a/components/main-posts/posts.css
+++ b/components/main-posts/posts.css
@@ -41,14 +41,19 @@
   }
   .contentFooter {
     display: flex;
+    align-items: center;
     gap: 16px;
 
     .stars {
       display: flex;
+      align-items: center;
+
       gap: 8px;
     }
     .btns {
       display: flex;
+      align-items: center;
+
       gap: 4px;
     }
   }
@@ -56,6 +61,8 @@
 
 .commentssBtn {
   display: flex;
+  align-items: center;
+
   border: none;
   background: transparent;
 }
